Added contact us

--- a/overview/index.html
+++ b/overview/index.html
@@ -142,7 +142,15 @@
       <a href="https://github.com/manohargaddam/GVSU-CIS641-SOPHOS/blob/main/docs/software_requirements_specification.md" class="u-active-palette-1-base u-align-left u-black u-border-none u-btn u-button-style u-hover-palette-1-base u-btn-1">SRS Document</a>
     </div>
   </section>
-
+  <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-d13a"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+    <p class="u-small-text u-text u-text-variant">
+      Contact:<br>
+      <span>Manohar Reddy</span><br>
+      <span>Mounika Ravada</span><br>
+      <span>Spencer Nelson</span>
+    </p>
+    
+  </footer>
 </body>
 
 </html>
