Ru  instructions and project page updates

--- a/overview/index.html
+++ b/overview/index.html
@@ -140,6 +140,14 @@
       </p> -->
       <a href="https://github.com/manohargaddam/GVSU-CIS641-SOPHOS/blob/main/docs/proposal-template.md" class="u-active-palette-1-base u-align-left u-black u-border-none u-btn u-button-style u-hover-palette-1-base u-btn-1">Project Proposal</a>
       <a href="https://github.com/manohargaddam/GVSU-CIS641-SOPHOS/blob/main/docs/software_requirements_specification.md" class="u-active-palette-1-base u-align-left u-black u-border-none u-btn u-button-style u-hover-palette-1-base u-btn-1">SRS Document</a>
+      <a href="https://github.com/manohargaddam/GVSU-CIS641-SOPHOS/blob/main/artifacts/Usecases%20-%20Board%20Screen.pdf" class="u-active-palette-1-base u-align-left u-black u-border-none u-btn u-button-style u-hover-palette-1-base u-btn-1">Usecases-Board Screen</a>
+      <a href="https://github.com/manohargaddam/GVSU-CIS641-SOPHOS/blob/main/artifacts/Usecases%20-%20Home%20Screen.pdf" class="u-active-palette-1-base u-align-left u-black u-border-none u-btn u-button-style u-hover-palette-1-base u-btn-1">Usecases - Home Screen</a>
+      <a href="https://github.com/manohargaddam/GVSU-CIS641-SOPHOS/blob/main/artifacts/Activity%20Diagram%20-%20Board%20Screen.pdf" class="u-active-palette-1-base u-align-left u-black u-border-none u-btn u-button-style u-hover-palette-1-base u-btn-1">Activity Diagram - Board Screen</a>
+      <a href="https://github.com/manohargaddam/GVSU-CIS641-SOPHOS/blob/main/artifacts/Activity%20Diagram%20-%20Home%20Screen.pdf  " class="u-active-palette-1-base u-align-left u-black u-border-none u-btn u-button-style u-hover-palette-1-base u-btn-1">Activity Diagram - Home Screen</a>
+      <a href="https://github.com/manohargaddam/GVSU-CIS641-SOPHOS/blob/main/artifacts/CRC%2C%20Class%20Model.pdf" class="u-active-palette-1-base u-align-left u-black u-border-none u-btn u-button-style u-hover-palette-1-base u-btn-1">CRC And Class Model</a>
+      <a href="https://github.com/manohargaddam/GVSU-CIS641-SOPHOS/blob/main/artifacts/Class%20Model%2C%20Object%20Model.pdf" class="u-active-palette-1-base u-align-left u-black u-border-none u-btn u-button-style u-hover-palette-1-base u-btn-1">Class Model And Object Model</a>
+      <a href="https://github.com/manohargaddam/GVSU-CIS641-SOPHOS/blob/main/artifacts/Design.pdf" class="u-active-palette-1-base u-align-left u-black u-border-none u-btn u-button-style u-hover-palette-1-base u-btn-1">Design</a>
+      <a href="https://github.com/manohargaddam/GVSU-CIS641-SOPHOS/blob/main/docs/software_requirements_specification_final.md" class="u-active-palette-1-base u-align-left u-black u-border-none u-btn u-button-style u-hover-palette-1-base u-btn-1">SRS Final</a>
     </div>
   </section>
   <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-d13a"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
